# rulodb

./: .codecov.yml  .criterion.toml  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  SECURITY.md  build.rs  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md  boring-cyborg.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
.github/workflows/: build.yml
benches/: evaluator_bench.rs  parser_bench.rs  planner_bench.rs
proto/: rulo.proto
scripts/: run-integration-tests.sh
sdk/typescript/: .prettierignore  .prettierrc  README.md  eslint.config.mjs  jest.config.js  jest.setup.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/typescript/__tests__/: and.test.ts  builder.test.ts  client.test.ts  count.test.ts  cursor.test.ts  database.test.ts  db.test.ts  enhanced-value-query.test.ts  eq.test.ts  expr.test.ts  filter.test.ts  ge.test.ts  get.test.ts  gt.test.ts  le.test.ts  limit.test.ts  lt.test.ts  match.test.ts  ne.test.ts  or.test.ts  orderBy.test.ts  pluck.test.ts  query.test.ts  result.test.ts  skip.test.ts  table.test.ts  terms.test.ts  without.test.ts
sdk/typescript/scripts/: generate-proto.ts
sdk/typescript/src/: builder.ts  client.ts  connection.ts  cursor.ts  database.ts  db.ts  expr.ts  expression.ts  index.ts  query.ts  result.ts  rulo.ts  table.ts  terms.ts  types.ts
src/: ast.rs  cli.rs  evaluator.rs  lib.rs  main.rs  parser.rs  planner.rs  server.rs  storage.rs
src/evaluator/: cursor.rs  database.rs  error.rs  expression.rs  query.rs  table.rs  tests.rs  utils.rs
src/planner/: builder.rs  cache.rs  error.rs  explain.rs  node.rs  optimizer.rs  tests.rs
tests/: integration_combined_operations.rs  integration_count.rs  integration_database_create.rs  integration_database_drop.rs  integration_database_list.rs  integration_delete.rs  integration_expressions_binary.rs  integration_expressions_combinations.rs  integration_expressions_literals.rs  integration_expressions_match.rs  integration_expressions_unary.rs  integration_expressions_variables.rs  integration_filter.rs  integration_get.rs  integration_get_all.rs  integration_insert.rs  integration_limit.rs  integration_order_by.rs  integration_pluck.rs  integration_skip.rs  integration_table.rs  integration_table_create.rs  integration_table_drop.rs  integration_table_list.rs  integration_table_query.rs  integration_update.rs  integration_without.rs  test_skip_limit_minimal.rs
tests/common/: mod.rs
