[package]
name = "rulodb"
description = "Binary for RuloDB"
edition = "2024"
authors = ["Gabor Boros <gabor.brs@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/gabor-boros/rulodb"
version = "0.0.1"
keywords = ["nosql", "database", "rulodb", "rulo"]
categories = ["database"]
publish = false

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
byteorder = "1.5.0"
clap = { version = "4.5.39", features = ["derive", "env"] }
futures-util = "0.3.31"
num_cpus = "1.17.0"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rocksdb = { version = "0.23.0", default-features = false, features = ["lz4", "multi-threaded-cf", "bindgen-runtime"] }
rust_decimal = { version = "1.37.1", features = ["serde-with-float"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "io-util", "net"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
