[package]
name = "rulodb"
description = "Binary for RuloDB"
edition = "2024"
authors = ["Gabor Boros <gabor.brs@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/rulodb/rulodb"
version = "0.0.1"
keywords = ["nosql", "database", "rulodb", "rulo"]
categories = ["database"]
publish = false

[lib]
name = "rulodb"
path = "./src/lib.rs"

[[bin]]
name = "rulodb"
path = "./src/main.rs"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "planner_bench"
harness = false

[[bench]]
name = "evaluator_bench"
harness = false

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
byteorder = "1.5.0"
clap = { version = "4.5.39", features = ["derive", "env"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
num_cpus = "1.17.0"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rocksdb = { version = "0.23.0", default-features = false, features = [
  "zstd",
  "multi-threaded-cf",
  "bindgen-runtime",
] }
rust_decimal = { version = "1.37.1", features = ["serde-with-float"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "net",
] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
fastrand = "2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
