[package]
name = "rulodb"
description = "RuloDB, a NoSQL database designed for developer experience."
edition = "2024"
authors = ["Opcotech Developers <dev@opcotech.com>"]
license = "AGPL-3.0 or LicenseRef-RuloDB-Commercial"
repository = "https://github.com/rulodb/rulodb"
version = "0.0.2"
keywords = ["nosql", "database", "rulodb", "rulo"]
categories = ["database"]
publish = false

[lib]
name = "rulodb"
path = "./src/lib.rs"

[[bin]]
name = "rulodb"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
num_cpus = "1.17.0"
pcre2 = "0.2.9"
prost = "0.14.1"
bincode = { version = "2.0.1", features = ["serde"] }
rocksdb = { version = "0.23.0", default-features = false, features = [
  "zstd",
  "multi-threaded-cf",
  "bindgen-runtime",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "net",
] }
tokio-stream = "0.1.17"
ulid = "1.2.1"

[dev-dependencies]
fastrand = "2.3"
tempfile = "3.20"

[build-dependencies]
prost-build = "0.14.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false
